--- a/Goblin_Engine/Goblin_Engine.vcxproj.filters
+++ b/Goblin_Engine/Goblin_Engine.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClInclude Include="src\Goblin\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Goblin\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Goblin\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Goblin\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
